<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1"
    android:background="#FFFFFF">   

    <TextView
       		 android:layout_width="fill_parent"
       		 android:layout_height="wrap_content"
       		 android:text="@string/create_character" 
       		 android:textSize="22sp"
       		 android:gravity="top"
       		 android:id="@+id/tasks_title"
       		 android:layout_alignParentTop="true"
       		 android:textColor="#000000"
       		 />   
    
    <TableLayout 
        android:id="@+id/table"
  	    android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:stretchColumns="1"
    	android:layout_below="@id/tasks_title">

	
	<TableRow >
	    
    	<TextView
       		 android:layout_width="fill_parent"
       		 android:layout_height="wrap_content"
       		 android:text="@string/minion_name"
       		 android:textColor="#000000"
      	 />
    	<EditText
      		  android:id="@+id/minion_name"
      		  android:layout_width="wrap_content"
      		  android:layout_height="wrap_content"
         />   
    
	</TableRow>
	
	<TableRow>
	    <TextView
      	    android:layout_width="fill_parent"
     	    android:layout_height="wrap_content"
    	    android:text="@string/race"
    	    android:textColor="#000000"
        />
	    <EditText
      		  android:id="@+id/minion_race"
      		  android:layout_width="wrap_content"
      		  android:layout_height="wrap_content"
         /> 
	        
	</TableRow>

	
	<TableRow>
	    <TextView
      	    android:layout_width="fill_parent"
     	    android:layout_height="wrap_content"
    	    android:text="@string/level"
    	    android:textColor="#000000"
        />
	    <EditText
      		  android:id="@+id/minion_level"
      		  android:layout_width="wrap_content"
      		  android:layout_height="wrap_content"
      		  android:inputType="number"
         /> 
	        
	</TableRow>
	
	<TableRow>
	    <TextView
      	    android:layout_width="fill_parent"
     	    android:layout_height="wrap_content"
    	    android:text="@string/hp"
    	    android:textColor="#000000"
        />
	    <EditText
      		  android:id="@+id/minion_max_hp"
      		  android:layout_width="wrap_content"
      		  android:layout_height="wrap_content"
      		  android:inputType="number"
         /> 
	        
	</TableRow>
	
	<TableRow>
	    
	    <TextView
      	    android:layout_width="fill_parent"
     	    android:layout_height="wrap_content"
    	    android:text="@string/gold_loot"
    	    android:textColor="#000000"
        />
	    <EditText
      		  android:id="@+id/minion_loot"
      		  android:layout_width="wrap_content"
      		  android:layout_height="wrap_content"
      		  android:inputType="number"
         /> 
	        
	</TableRow>
		

</TableLayout>

    	    <TextView 
    	    android:id="@+id/randomisation_text"
	        android:layout_width="fill_parent"
     	    android:layout_height="wrap_content"
    	    android:text="@string/randomisation_buttons"
    	    android:textColor="#000000"
    	    android:layout_below="@id/table"
	        />
    
    	<Button
	    android:id="@+id/random_name_button"
	    android:layout_width="80sp"
	    android:layout_height="35sp"
	    android:layout_gravity="bottom"
	    android:layout_below="@id/randomisation_text"	    
	    android:text="@string/name" 
	    android:textColor="#FFFFFF"
	    android:background="#663399"
	    />
	    
	    <Button
	    android:id="@+id/random_race_button"
	    android:layout_width="80sp"
	    android:layout_height="35sp"
	    android:layout_gravity="bottom"
	    android:text="@string/race" 
	    android:textColor="#FFFFFF"
	    android:layout_below="@id/randomisation_text"
	    android:layout_toRightOf="@id/random_name_button"
	    android:background="#666666"
	    />
	    	    

	    
	    <Button
	    android:id="@+id/random_hp_and_level_button_high"
	    android:layout_width="80sp"
	    android:layout_height="35sp"
	    android:layout_gravity="bottom"
	    android:text="@string/level_hp" 
	    android:textColor="#000000"
	    android:layout_below="@id/randomisation_text"
	    android:layout_toRightOf="@id/random_race_button"
	    android:background="#FF0000"
	    />
	    
	    	    <Button
	    android:id="@+id/random_hp_and_level_button_medium"
	    android:layout_width="80sp"
	    android:layout_height="35sp"
	    android:layout_gravity="bottom"
	    android:text="@string/level_hp" 
	    android:textColor="#000000"
	    android:layout_below="@id/random_hp_and_level_button_high"
	    android:layout_toRightOf="@id/random_race_button"
	    android:background="#FFF000"
	    />
	    <Button
	    android:id="@+id/random_hp_and_level_button_low"
	    android:layout_width="80sp"
	    android:layout_height="35sp"
	    android:layout_gravity="bottom"
	    android:text="@string/level_hp" 
	    android:textColor="#000000"
	    android:background="#4AD553"
	    android:layout_below="@id/random_hp_and_level_button_medium"
	    android:layout_toRightOf="@id/random_race_button"
	    />
    
    	<Button
	    android:id="@+id/random_loot_button_high"
	    android:layout_width="80sp"
	    android:layout_height="35sp"
	    android:layout_gravity="bottom"
	    android:text="@string/high_gold" 
	    android:textColor="#000000"
	    android:layout_below="@id/randomisation_text"
	    android:layout_toRightOf="@id/random_hp_and_level_button_high"
	    android:background="#CC0033"
	    />
    	<Button
	    android:id="@+id/random_loot_button_medium"
	    android:layout_width="80sp"
	    android:layout_height="35sp"
	    android:layout_gravity="bottom"
	    android:text="@string/medium_gold" 
	    android:textColor="#000000"
	    android:layout_below="@id/random_loot_button_high"
	    android:layout_toRightOf="@id/random_hp_and_level_button_high"
	    android:background="#FF6600"
	    />
    	
    	<Button
	    android:id="@+id/random_loot_button_low"
	    android:layout_width="80sp"
	    android:layout_height="35sp"
	    android:layout_gravity="bottom"
	    android:text="@string/low_gold" 
	    android:textColor="#000000"
	    android:layout_below="@id/random_loot_button_medium"
	    android:layout_toRightOf="@id/random_hp_and_level_button_high"
	    android:background="#99CC33"
	    />
    
    	<Button
	    android:id="@+id/cancel_button"
	    android:layout_width="120sp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="bottom"
	    android:text="@string/cancel" 
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:textColor="#CC0000"
	    />

    	<Button
	    android:id="@+id/add_button"
	    android:layout_width="120sp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="bottom"
	    android:text="@string/create_minion" 
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentRight="true"
	    android:textColor="#336600"
	    />
		
</RelativeLayout>


